# UltraFace_NCNN_Android_demo

./: README.md  pc_path.txt
app/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: UltraFace.cpp  UltraFace.h  UltraFace_jni.cpp
app/src/main/java/com/poya/UltraFace/: MainActivity.java  UltraFace.java
